# data-generator

./: .pre-commit-config.yaml  Cargo.toml  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/schema/: Cargo.toml
crates/schema/src/: dummy.rs  lib.rs  utils.rs
crates/schema/src/structures/: post.rs  user.rs
src/: dummy.rs  lib.rs  main.rs  structures.rs  utils.rs
src/structures/: post.rs  user.rs
